--- a/src/components/teaser/_teaser.scss
+++ b/src/components/teaser/_teaser.scss
@@ -5,6 +5,7 @@
 .cmp-teaser__image {}
 .cmp-teaser__content {}
 .cmp-teaser__pretitle {}
+/*
 .cmp-teaser__title {
   position: absolute;
 top: 15%;
@@ -19,11 +20,9 @@ left: 20%;
 font-family: "Raleway",Helvetica,sans-serif;
 font-weight: 100;
 
-
-
-
 }
 .cmp-teaser__title-link {}
+
 .cmp-teaser__description {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   font-family: 'Roboto', sans-serif;
@@ -42,5 +41,62 @@ left: 20%;
 box-sizing: border-box;
 
 }
+*/
 .cmp-teaser__action-container {}
 .cmp-teaser__action-link {}
+
+.modernTeaser{
+  position: relative;
+  height: 100%;
+
+}
+
+.modernTeaser .cmp-teaser  {
+  //text-align: center;
+ clear: both;
+//  width: 100%;
+
+}
+
+.modernTeaser .cmp-teaser__image{
+  //display: block;
+//overflow: visible;
+  //z-index:-1;
+//  margin-left: auto;
+//  margin-right: auto;
+
+}
+
+.modernTeaser .cmp-teaser__content{
+  position: absolute;
+     z-index:1000;
+  top: 50%;
+  left: 50%;
+     width: 80%;
+     margin-top: -10%;
+     transform: translate(-50%, -50%);
+
+
+}
+
+.modernTeaser .cmp-teaser__title {
+      font-size: 6vw;
+      text-transform: uppercase;
+    //  transform: translateY(10vw);
+      color: #333333;
+      letter-spacing: 0.45rem;
+      font-weight: 300;
+      text-shadow: -15px 5px 20px #ced0d3;
+
+/*
+      margin: 0 auto;
+        left: 0;
+        right: 0;
+        top: -40%;*/
+    }
+
+    .modernTeaser .cmp-teaser__description{
+      //  transform: translate(-60%, -10%);
+          color: #fff;
+        font-size: 2.5vw;
+    }
